Moved DbContext in separate project, added API controller etc.

--- a/SampleAspNetMVCApplication/TestMVCApp/Views/Reviews/_Review.cshtml
+++ b/SampleAspNetMVCApplication/TestMVCApp/Views/Reviews/_Review.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TestMVCApp.Models.RestaurantReview>
+﻿@model IEnumerable<Common.Models.RestaurantReview>
 
 <div>
 	<h4>Restaurant Review</h4>
